[project]
name = "sullied_cryptography_testing"
version = "0.37.0"
authors = [
	{ name = "Kevin Watson", email= "git-contact@watsonkp.com" },
]
description = "Cryptography testing tools inspired by CTF challenges."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved ::MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/watsonkp/cryptopals-python"
"Bug Tracker" = "https://github.com/watsonkp/cryptopals-python/issues"

[tool.pytest.ini_options]
pythonpath = [
	"src"
]
